docs/apache-airflow-providers-amazon/7.1.0/_sources/_api/tests/system/providers/amazon/aws/example_sagemaker/index.rst.txt
:py:mod:`tests.system.providers.amazon.aws.example_sagemaker`
=============================================================

.. py:module:: tests.system.providers.amazon.aws.example_sagemaker


Module Contents
---------------


Functions
~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_sagemaker.generate_data
   tests.system.providers.amazon.aws.example_sagemaker.set_up
   tests.system.providers.amazon.aws.example_sagemaker.delete_ecr_repository
   tests.system.providers.amazon.aws.example_sagemaker.delete_logs
   tests.system.providers.amazon.aws.example_sagemaker.delete_model_group
   tests.system.providers.amazon.aws.example_sagemaker.delete_pipeline
   tests.system.providers.amazon.aws.example_sagemaker.delete_experiment
   tests.system.providers.amazon.aws.example_sagemaker.delete_docker_image



Attributes
~~~~~~~~~~

.. autoapisummary::

   tests.system.providers.amazon.aws.example_sagemaker.DAG_ID
   tests.system.providers.amazon.aws.example_sagemaker.ROLE_ARN_KEY
   tests.system.providers.amazon.aws.example_sagemaker.sys_test_context_task
   tests.system.providers.amazon.aws.example_sagemaker.KNN_IMAGES_BY_REGION
   tests.system.providers.amazon.aws.example_sagemaker.SAMPLE_SIZE
   tests.system.providers.amazon.aws.example_sagemaker.PREPROCESS_SCRIPT_TEMPLATE
   tests.system.providers.amazon.aws.example_sagemaker.test_context
   tests.system.providers.amazon.aws.example_sagemaker.test_run


.. py:data:: DAG_ID
   :annotation: = example_sagemaker

   

.. py:data:: ROLE_ARN_KEY
   :annotation: = ROLE_ARN

   

.. py:data:: sys_test_context_task
   

   

.. py:data:: KNN_IMAGES_BY_REGION
   

   

.. py:data:: SAMPLE_SIZE
   :annotation: = 600

   

.. py:data:: PREPROCESS_SCRIPT_TEMPLATE
   :annotation: = Multiline-String

    .. raw:: html

        <details><summary>Show Value</summary>

    .. code-block:: text
        :linenos:

        
        import boto3
        import numpy as np
        import pandas as pd

        def main():
            # Load the dataset from {input_path}/input.csv, split it into train/test
            # subsets, and write them to {output_path}/ for the Processing Operator.

            data = pd.read_csv('{input_path}/input.csv')

            # Split into test and train data
            data_train, data_test = np.split(
                data.sample(frac=1, random_state=np.random.RandomState()), [int(0.7 * len(data))]
            )

            # Remove the "answers" from the test set
            data_test.drop(['class'], axis=1, inplace=True)

            # Write the splits to disk
            data_train.to_csv('{output_path}/train.csv', index=False, header=False)
            data_test.to_csv('{output_path}/test.csv', index=False, header=False)

            print('Preprocessing Done.')

        if __name__ == "__main__":
            main()


    .. raw:: html

        </details>

   

.. py:function:: generate_data()

   generates a very simple csv dataset with headers


.. py:function:: set_up(env_id, role_arn)


.. py:function:: delete_ecr_repository(repository_name)


.. py:function:: delete_logs(env_id)


.. py:function:: delete_model_group(group_name, model_version_arn)


.. py:function:: delete_pipeline(pipeline_name)


.. py:function:: delete_experiment(name)


.. py:function:: delete_docker_image(image_name)


.. py:data:: test_context
   

   

.. py:data:: test_run
   

   

